TA-000 Fix table row alignment

--- a/client/css/ussba.css
+++ b/client/css/ussba.css
@@ -167,7 +167,7 @@ tr td:not(:first-child) {
   }
 
   .modal-extra-info-table-header, .modal-extra-info-table-data {
-    padding: 5px;
+    padding: 2px;
     text-align: left;
   }
 
